# rplace

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt  main.cpp
.github/workflows/: build_and_test.yaml
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/protocol/: CMakeLists.txt  protocol.md
src/protocol/include/protocol/: get_pixel.hpp  ping.hpp  pixel.hpp  pong.hpp  position.hpp  set_pixel.hpp  types.hpp
src/protocol/json_serializer/: CMakeLists.txt
src/protocol/json_serializer/include/json_serializer/: get_pixel.hpp  message_type.hpp  ping.hpp  pixel.hpp  pong.hpp  serializer.hpp  set_pixel.hpp
src/protocol/json_serializer/src/: get_pixel.cpp  message_type.cpp  ping.cpp  pixel.cpp  pong.cpp  serializer.cpp  set_pixel.cpp
src/protocol/json_serializer/tests/: CMakeLists.txt  test_deserialize_get_pixel.cpp  test_deserialize_ping.cpp  test_deserialize_set_pixel.cpp  test_serialize_pixel.cpp  test_serialize_pong.cpp
src/server/: CMakeLists.txt  main.cpp  map.hpp  message_handler.hpp  udp_server.cpp  udp_server.hpp
testing/: README.md  conftest.py  pytest.ini  requirements.txt
testing/testcases/: test_client.py  test_server.py
